--- a/Cash5.html
+++ b/Cash5.html
@@ -136,6 +136,7 @@
                     <button class="cash5-multi-gen-btn" data-count="16">Generate 16</button>
                     <button id="cash5-generate-from-trios" class="cash5-multi-gen-btn" style="background: #9b59b6; color: white; margin-top: 10px; display: block; width: 100%;">From Frequent Trios</button>
                     <button id="cash5-generate-patterned-trios" class="cash5-multi-gen-btn" style="background: #e67e22; color: white; margin-top: 8px; display: block; width: 100%;">Patterned Trio Generator</button>
+                    <button id="cash5-generate-15-last3-20s" class="cash5-multi-gen-btn" style="background: #e74c3c; color: white; margin-top: 8px; display: block; width: 100%;">15 + Last 3 in 20s</button>
                 </div>
                 <div id="cash5-generated-table" style="margin-top:18px;"></div>
                 <div id="cash5-csv-loading" style="margin-top:10px; color:#888; font-size:1.05em;"></div>
